...
        }),
        (text: "Dark Mode with XIB", handler: {
            let vc = DMWithXIBTableViewController()
            vc.title = "Dark Mode with XIB"
            return vc
        }),
        (text: "Dark Mode with View Model", handler: {
            let style = UIApplication.shared.windows.first?.overrideUserInterfaceStyle
            let vm = DMWithVMViewModel(style: style ?? .unspecified)
            let vc = DMWithVMTableViewController(viewModel: vm)
            return vc
        }),
        (text: "Collection view with many cells and timers", handler: {
...
