...
                        <color key="backgroundColor" name="Background"/>
                        <connections>
                            <outlet property="dataSource" destination="zYH-nZ-Xv8" id="sfx-et-cTa"/>
                            <outlet property="delegate" destination="zYH-nZ-Xv8" id="NpI-tk-OYL"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Settings" leftItemsSupplementBackButton="YES" largeTitleDisplayMode="always" id="9z7-t7-S7S"/>
                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="4xY-8O-f6K">
                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <attributedString key="attributedTitle">
                            <fragment content="-- refreshing --">
                                <attributes>
...
