<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="EXc-7t-Jml">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Begin-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="QuizTesting" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="svH-uh-AIl">
                                <rect key="frame" x="147.5" y="318.5" width="80" height="30"/>
                                <state key="normal" title="Start Test..."/>
                                <connections>
                                    <segue destination="Ioa-H7-oOI" kind="show" id="pwc-9P-tah"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Expand your math skills!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dfl-p8-2lo">
                                <rect key="frame" x="128.5" y="72" width="343" height="38.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="svH-uh-AIl" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6IU-mF-hq3"/>
                            <constraint firstItem="dfl-p8-2lo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Eyo-17-qNP"/>
                            <constraint firstItem="svH-uh-AIl" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="f7O-nM-CEb"/>
                            <constraint firstItem="dfl-p8-2lo" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" symbolic="YES" id="pw6-QD-yOg"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Begin" id="Uqp-E6-sW4"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1095" y="215"/>
        </scene>
        <!--Quiz-->
        <scene sceneID="m0q-ZM-lV7">
            <objects>
                <viewController id="Ioa-H7-oOI" customClass="Quiz" customModule="QuizTesting" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="A2r-yM-X7Q"/>
                        <viewControllerLayoutGuide type="bottom" id="4QA-Iq-j8a"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="aXL-cx-Mk1">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="How much is:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mja-Ie-t3E">
                                <rect key="frame" x="204" y="72" width="192" height="39"/>
                                <accessibility key="accessibilityConfiguration" identifier="title"/>
                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="+" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Vy-ru-bic">
                                <rect key="frame" x="290.5" y="211" width="20" height="38.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="plus"/>
                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="32" translatesAutoresizingMaskIntoConstraints="NO" id="btA-fc-lAv">
                                <rect key="frame" x="28" y="328.5" width="544" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="BcY-0c-p0s"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numbersAndPunctuation"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" misplaced="YES" text="Value2" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fNs-Kp-F11">
                                <rect key="frame" x="318.5" y="211" width="253.5" height="38.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="v2"/>
                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Value1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zOs-tg-nME">
                                <rect key="frame" x="28" y="211" width="254.5" height="38.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="v1"/>
                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="=" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UIS-bD-Ubp">
                                <rect key="frame" x="290" y="269.5" width="20" height="39"/>
                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" red="1" green="0.83105170699999997" blue="0.5646933126" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="Mja-Ie-t3E" firstAttribute="centerX" secondItem="aXL-cx-Mk1" secondAttribute="centerX" id="5qk-Ut-JZM"/>
                            <constraint firstItem="Mja-Ie-t3E" firstAttribute="top" secondItem="A2r-yM-X7Q" secondAttribute="bottom" constant="8" symbolic="YES" id="6It-j8-gQL"/>
                            <constraint firstItem="UIS-bD-Ubp" firstAttribute="centerX" secondItem="aXL-cx-Mk1" secondAttribute="centerX" id="6We-Du-Pdm"/>
                            <constraint firstItem="btA-fc-lAv" firstAttribute="trailing" secondItem="aXL-cx-Mk1" secondAttribute="trailingMargin" constant="-8" id="6jt-jr-ar0"/>
                            <constraint firstItem="zOs-tg-nME" firstAttribute="baseline" secondItem="0Vy-ru-bic" secondAttribute="baseline" id="6o9-Yk-fOf"/>
                            <constraint firstItem="zOs-tg-nME" firstAttribute="leading" secondItem="aXL-cx-Mk1" secondAttribute="leadingMargin" constant="8" id="Jmh-Hp-ZuD"/>
                            <constraint firstItem="UIS-bD-Ubp" firstAttribute="top" secondItem="0Vy-ru-bic" secondAttribute="bottom" constant="20" id="Ju0-RN-uxd"/>
                            <constraint firstItem="0Vy-ru-bic" firstAttribute="centerX" secondItem="aXL-cx-Mk1" secondAttribute="centerX" id="PIi-th-RbO"/>
                            <constraint firstItem="0Vy-ru-bic" firstAttribute="top" secondItem="Mja-Ie-t3E" secondAttribute="bottom" constant="100" id="PtY-jJ-BQE"/>
                            <constraint firstItem="btA-fc-lAv" firstAttribute="leading" secondItem="aXL-cx-Mk1" secondAttribute="leadingMargin" constant="8" id="S8M-Y2-EXu"/>
                            <constraint firstItem="zOs-tg-nME" firstAttribute="centerY" secondItem="aXL-cx-Mk1" secondAttribute="centerY" id="T9r-Tk-6r4"/>
                            <constraint firstItem="btA-fc-lAv" firstAttribute="top" secondItem="UIS-bD-Ubp" secondAttribute="bottom" constant="20" id="TBx-lw-ZPe"/>
                            <constraint firstItem="0Vy-ru-bic" firstAttribute="centerY" secondItem="aXL-cx-Mk1" secondAttribute="centerY" id="avB-wu-dZ5"/>
                            <constraint firstItem="zOs-tg-nME" firstAttribute="centerY" secondItem="0Vy-ru-bic" secondAttribute="centerY" id="cie-qp-eOM"/>
                            <constraint firstItem="fNs-Kp-F11" firstAttribute="trailing" secondItem="aXL-cx-Mk1" secondAttribute="trailingMargin" constant="-8" id="dbO-aR-TIZ"/>
                            <constraint firstItem="fNs-Kp-F11" firstAttribute="leading" secondItem="0Vy-ru-bic" secondAttribute="trailing" constant="8" id="n5f-MS-ebE"/>
                            <constraint firstItem="fNs-Kp-F11" firstAttribute="centerY" secondItem="aXL-cx-Mk1" secondAttribute="centerY" id="pfn-JG-yHo"/>
                            <constraint firstItem="fNs-Kp-F11" firstAttribute="baseline" secondItem="0Vy-ru-bic" secondAttribute="baseline" id="pyH-k3-Tf8"/>
                            <constraint firstItem="0Vy-ru-bic" firstAttribute="leading" secondItem="zOs-tg-nME" secondAttribute="trailing" constant="8" id="s8a-sS-xGm"/>
                        </constraints>
                        <variation key="default">
                            <mask key="constraints">
                                <exclude reference="T9r-Tk-6r4"/>
                                <exclude reference="cie-qp-eOM"/>
                                <exclude reference="avB-wu-dZ5"/>
                                <exclude reference="pfn-JG-yHo"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Quiz" id="HvE-fd-ob7"/>
                    <connections>
                        <outlet property="firstValue" destination="zOs-tg-nME" id="PaA-PU-aAl"/>
                        <outlet property="operation" destination="0Vy-ru-bic" id="vRM-mR-xjw"/>
                        <outlet property="result" destination="btA-fc-lAv" id="dlo-4a-MeH"/>
                        <outlet property="secondValue" destination="fNs-Kp-F11" id="j9i-rP-tdZ"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="pEz-sB-RQX" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1848" y="215"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="qof-8s-Be5">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="EXc-7t-Jml" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="gOt-xD-2H1">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="MjS-Tu-I4i"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Sa5-1t-FqZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="240" y="215"/>
        </scene>
    </scenes>
</document>
